<Fix: links layout issue>

--- a/components/layout/Navigation.module.scss
+++ b/components/layout/Navigation.module.scss
@@ -261,5 +261,6 @@
   }
   .hide__link {
     display: none;
+    visibility: hidden;
   }
 }
